--- a/vue/zall-vue/src/assets/css/main.css
+++ b/vue/zall-vue/src/assets/css/main.css
@@ -33,6 +33,12 @@ ul {
     margin-left: 25%;
 }
 
+.container>.title {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
 .form {
     width: 100%;
 }
