--- a/vue/zall-vue/src/assets/css/main.css
+++ b/vue/zall-vue/src/assets/css/main.css
@@ -34,9 +34,9 @@ ul {
 }
 
 .container>.title {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .form {
@@ -91,4 +91,41 @@ ul {
     white-space: nowrap;
     text-overflow: ellipsis;
     word-break: break-all;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    display: none;
+}
+
+.suggest-text {
+    cursor: pointer;
+    color: #1677ff;
+}
+
+.no-data-text {
+    font-size: 14px;
+    text-align: center;
+    line-height: 20px;
+    padding: 10px;
+}
+
+.section {
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #d9d9d9;
+}
+
+.section>.section-title {
+    font-size: 14px;
+    padding: 14px;
+}
+
+.section>.section-body {
+    border-top: 1px solid #d9d9d9;
+    padding: 10px;
+}
+
+.section+.section {
+    margin-top: 10px;
 }
