--- a/vue/zall-vue/src/assets/css/main.css
+++ b/vue/zall-vue/src/assets/css/main.css
@@ -145,3 +145,12 @@ ul {
     word-break: break-all;
     padding-left: 24px;
 }
+
+.input-title {
+    font-size: 14px;
+    margin-bottom: 6px;
+}
+
+.input-item+.input-item {
+    margin-top: 16px;
+}
