--- a/vue/zall-vue/src/assets/css/main.css
+++ b/vue/zall-vue/src/assets/css/main.css
@@ -30,7 +30,7 @@ ul {
 
 .container {
     width: 50%;
-    margin-left: 25%;
+    margin: auto;
 }
 
 .container>.title {
@@ -130,7 +130,8 @@ ul {
     margin-top: 10px;
 }
 
-.input-desc {
+.input-desc,
+.section-title-desc {
     font-size: 13px;
     color: gray;
     margin-top: 6px;
@@ -161,4 +162,22 @@ ul {
     padding-left: 24px;
     color: gray;
     margin-bottom: 6px;
+}
+
+.container>.header {
+    font-size: 18px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.flex-between {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.save-btn-line {
+    border-top: 1px solid #d9d9d9;
+    margin-top: 10px;
+    padding-top: 6px;
 }
