--- a/vue/zall-vue/src/assets/css/main.css
+++ b/vue/zall-vue/src/assets/css/main.css
@@ -174,6 +174,12 @@ ul {
     font-weight: bold;
 }
 
+.flex-end {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 .flex-between {
     display: flex;
     align-items: center;
