--- a/vue/zall-vue/src/assets/css/main.css
+++ b/vue/zall-vue/src/assets/css/main.css
@@ -133,7 +133,7 @@ ul {
 
 .section>.section-body {
     border-top: 1px solid #d9d9d9;
-    padding: 10px;
+    padding: 10px 14px;
 }
 
 .section+.section {
